# browser-presence

./: Cargo.toml  clients.json
extension/: background.js  manifest.json
extension/content_scripts/: kissanime.js
src/: client.rs  main.rs  util.rs
