[package]
name = "browser-presence"
version = "0.1.0"
authors = ["Mr. Fawkes <mrfawkes@mischievousworkshop.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
discord-rpc-client = "*"
json = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
termion = "*"
ws = "*"